Added logo image, copyright, and changed some spacing and font sizes

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
     <title>My custom portfolio</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <img class="logo col-md-2" src="https://unsplash.it/100/100" alt="logo">
+            <img class="logo col-md-2" src="images_src/logo.jpg" alt="logo">
             <div class="heading col-md-10">
                 <h1>Derek Harmann</h1>
                 <p>Front-end ninja</p>
@@ -20,28 +21,37 @@
         </div>
         <hr>
         <div class="row">
-            <img class="col-md-12" src="https://unsplash.it/800/400" alt="logo">
+            <img class="content-image col-md-12" src="https://unsplash.it/800/400" alt="content image">
         </div>
         <div class="row">
-            <h2 class="col-md-12">Featured Work</h2>
+            <h2 class="featured col-md-12">Featured Work</h2>
         </div>
         <div class="row">
-            <div class="app col-md-4">
-                <img class="app-image" src="https://unsplash.it/400/200" alt="app pic">
-                <h3>Appify</h3>
-                <a href="">link address</a>
+            <div class="app col-md-4 col-sm-6">
+                <img class="app-image" src="https://unsplash.it/800/400" alt="app pic">
+                <div class="project">
+                    <h3>Appify</h3>
+                    <a href="">link address</a>
+                </div>
             </div>
-            <div class="app col-md-4">
-                <img class="app-image" src="https://unsplash.it/400/200" alt="app pic">
-                <h3>Appify</h3>
-                <a href="">link address</a>
+            <div class="app col-md-4 col-sm-6">
+                <img class="app-image" src="https://unsplash.it/800/400" alt="app pic">
+                <div class="project">
+                    <h3>Appify</h3>
+                    <a href="">link address</a>
+                </div>
             </div>
-            <div class="app col-md-4">
-                <img class="app-image" src="https://unsplash.it/400/200" alt="app pic">
-                <h3>Appify</h3>
-                <a href="">link address</a>
+            <div class="app col-md-4 col-sm-6">
+                <img class="app-image" src="https://unsplash.it/800/400" alt="app pic">
+                <div class="project">
+                    <h3>Appify</h3>
+                    <a href="">link address</a>
+                </div>
             </div>
         </div>
+        <footer class="row">
+            <p class="col-md-12">&copy; Derek Harmann</p>
+        </footer>
     </div>
 </body>
 </html>
