--- a/index.html
+++ b/index.html
@@ -13,49 +13,69 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <header class="row">
             <img class="logo col-md-2" src="images_src/logo.jpg" alt="logo">
             <div class="heading col-md-10">
                 <h1>Derek Harmann</h1>
                 <p>Front-end ninja</p>
             </div>
-        </div>
+        </header>
+
         <hr>
-        <div class="row">
+
+        <section class="row">
             <picture class="img-responsive col-md-12">
                 <source media="(min-width: 940px)" srcset="images/html-css-1880_large_2x.jpg 2x, images/html-css-940_large_1x.jpg 1x">
                 <source media="(min-width: 500px)" srcset="images/html-css-785_medium.jpg">
-                <img src="images/html-css-250_small.jpg">
+                <img src="images/html-css-500_small.jpg" alt="Image of html and css">
             </picture>
-        </div>
-        <div class="row">
+        </section>
+
+        <section class="row">
             <h2 class="featured col-md-12">Featured Work</h2>
-        </div>
-        <div class="apps row">
-            <div class="app col-md-4 col-sm-6">
-                <img class="app-image" src="images_src/entertainment_center.jpg" alt="Image of popcorn and movie reel">
+        </section>
+
+        <section class="row">
+            <article class="app col-md-4 col-sm-6">
+                <picture class="img-responsive">
+                    <source media="(min-width: 500px) and (max-width: 768px)" srcset="images/entertainment_center-800_large.jpg">
+                    <img src="images/entertainment_center-500_medium.jpg" alt="Image of popcorn and movie reel">
+                </picture>
                 <div class="project">
                     <h3>Entertainment Center</h3>
                     <a href="https://github.com/harmannd/entertainment_center">Github link</a>
                 </div>
-            </div>
-            <div class="app col-md-4 col-sm-6">
-                <img class="app-image" src="images_src/papabob.jpg" alt="Image of a Pizza shop">
+            </article>
+
+            <article class="app col-md-4 col-sm-6">
+                <picture class="img-responsive">
+                    <source media="(min-width: 500px) and (max-width: 768px)" srcset="images/papabob-800_large.jpg">
+                    <img src="images/papabob-500_medium.jpg" alt="Image of a Pizza shop">
+                </picture>
                 <div class="project">
                     <h3>Papa Bobs</h3>
                     <a href="https://github.com/harmannd/PapaBobs">Github link</a>
                 </div>
-            </div>
-            <div class="app col-md-4 col-sm-6">
-                <img class="app-image" src="images_src/portfolio.jpg" alt="Image of a portfolio">
+            </article>
+
+            <article class="app col-md-4 col-sm-6">
+                <picture class="img-responsive">
+                    <source media="(min-width: 500px) and (max-width: 768px)" srcset="images/portfolio-800_large.jpg">
+                    <img src="images/portfolio-500_medium.jpg" alt="Image of a portfolio">
+                </picture>
                 <div class="project">
                     <h3>Portfolio</h3>
                     <a href="https://github.com/harmannd/Portfolio-Final">Github link</a>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
+
         <footer class="row">
-            <p class="col-md-12">&copy; Derek Harmann</p>
+            <p class="copyright col-md-2">&copy; Derek Harmann</p>
+            <div class="social col-md-10">
+                <a class="zocial-github" href="https://github.com/harmannd"></a>
+                <a class="zocial-linkedin" href="https://www.linkedin.com/in/derek-harmann-3b8731129/"></a>
+            </div>
         </footer>
     </div>
 </body>
