--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
         </section>
 
         <footer class="row">
-            <p class="copyright col-md-2">&copy; Derek Harmann</p>
-            <div class="social col-md-10">
-                <a class="zocial-github" href="https://github.com/harmannd"></a>
-                <a class="zocial-linkedin" href="https://www.linkedin.com/in/derek-harmann-3b8731129/"></a>
+            <div class="navbar navbar-inverse navbar-fixed-bottom">
+                <ul class="nav">
+                    <li><p class="copyright navbar-text">&copy; Derek Harmann</p></li>
+                    <li><a class="zocial-github navbar-link" href="https://github.com/harmannd"></a></li>
+                    <li><a class="zocial-linkedin navbar-link" href="https://www.linkedin.com/in/derek-harmann-3b8731129/"></a></li>
+                </ul>
             </div>
         </footer>
     </div>
