--- a/index.html
+++ b/index.html
@@ -7,62 +7,63 @@
     <title>My custom portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="css/media.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <div class="container">
         <header class="row">
-            <img class="logo col-md-2" src="images_src/logo.jpg" alt="logo">
+            <div class="col-md-2">
+                <img class="logo" src="images_src/logo.jpg" alt="logo">
+            </div>
             <div class="heading col-md-10">
                 <h1>Derek Harmann</h1>
                 <p>Front-end ninja</p>
             </div>
         </header>
 
-        <hr>
-
         <section class="row">
-            <picture class="img-responsive col-md-12">
-                <source media="(min-width: 940px)" srcset="images/html-css-1880_large_2x.jpg 2x, images/html-css-940_large_1x.jpg 1x">
-                <source media="(min-width: 500px)" srcset="images/html-css-785_medium.jpg">
-                <img src="images/html-css-500_small.jpg" alt="Image of html and css">
-            </picture>
+            <div class="col-md-12">
+                <hr>
+            </div>
         </section>
 
         <section class="row">
-            <h2 class="featured col-md-12">Featured Work</h2>
-        </section>
-
-        <section class="row">
-            <article class="app col-md-4 col-sm-6">
-                <picture class="img-responsive">
-                    <source media="(min-width: 500px) and (max-width: 768px)" srcset="images/entertainment_center-800_large.jpg">
-                    <img src="images/entertainment_center-500_medium.jpg" alt="Image of popcorn and movie reel">
+            <div class="col-md-12">
+                <picture>
+                    <source media="(min-width: 940px)" srcset="images/html-css-1880_large_2x.jpg 2x, images/html-css-940_large_1x.jpg 1x">
+                    <source media="(min-width: 500px)" srcset="images/html-css-785_medium.jpg">
+                    <img class="img-responsive" src="images/html-css-500_small.jpg" alt="Image of html and css">
                 </picture>
+            </div>
+        </section>
+
+        <section class="row">
+            <div class="col-md-12">
+                <h2 class="featured">Featured Work</h2>
+            </div>
+        </section>
+
+        <section class="row">
+            <article class="app col-sm-6 col-md-4">
+                <img class="img-responsive" src="images/entertainment_center-500_medium.jpg" srcset="images/entertainment_center-500_medium.jpg 500w, images/entertainment_center-800_large.jpg 800w" sizes="(max-width: 768px) 100vw, (min-width: 769px) and (max-width: 991px) 50vw, 33vw" alt="Image of popcorn and movie reel">
                 <div class="project">
                     <h3>Entertainment Center</h3>
                     <a href="https://github.com/harmannd/entertainment_center">Github link</a>
                 </div>
             </article>
 
-            <article class="app col-md-4 col-sm-6">
-                <picture class="img-responsive">
-                    <source media="(min-width: 500px) and (max-width: 768px)" srcset="images/papabob-800_large.jpg">
-                    <img src="images/papabob-500_medium.jpg" alt="Image of a Pizza shop">
-                </picture>
+            <article class="app col-sm-6 col-md-4">
+                <img class="img-responsive" src="images/papabob-500_medium.jpg" srcset="images/papabob-500_medium.jpg 500w, images/papabob-800_large.jpg 800w" sizes="(max-width: 768px) 100vw, (min-width: 769px) and (max-width: 991px) 50vw, 33vw" alt="Image of a Pizza shop">
                 <div class="project">
                     <h3>Papa Bobs</h3>
                     <a href="https://github.com/harmannd/PapaBobs">Github link</a>
                 </div>
             </article>
 
-            <article class="app col-md-4 col-sm-6">
-                <picture class="img-responsive">
-                    <source media="(min-width: 500px) and (max-width: 768px)" srcset="images/portfolio-800_large.jpg">
-                    <img src="images/portfolio-500_medium.jpg" alt="Image of a portfolio">
-                </picture>
+            <article class="app col-sm-6 col-md-4">
+                <img class="img-responsive" src="images/portfolio-500_medium.jpg" srcset="images/portfolio-500_medium.jpg 500w, images/portfolio-800_large.jpg 800w" sizes="(max-width: 768px) 100vw, (min-width: 769px) and (max-width: 991px) 50vw, 33vw" alt="Image of a portfolio">
                 <div class="project">
                     <h3>Portfolio</h3>
                     <a href="https://github.com/harmannd/Portfolio-Final">Github link</a>
@@ -71,11 +72,11 @@
         </section>
 
         <footer class="row">
-            <div class="navbar navbar-inverse navbar-fixed-bottom">
+            <div class="navbar navbar-inverse navbar-fixed-bottom col-md-12">
                 <ul class="nav">
                     <li><p class="copyright navbar-text">&copy; Derek Harmann</p></li>
-                    <li><a class="zocial-github navbar-link" href="https://github.com/harmannd"></a></li>
-                    <li><a class="zocial-linkedin navbar-link" href="https://www.linkedin.com/in/derek-harmann-3b8731129/"></a></li>
+                    <li><a class="zocial-github navbar-link" href="https://github.com/harmannd" target="_blank"></a></li>
+                    <li><a class="zocial-linkedin navbar-link" href="https://www.linkedin.com/in/derek-harmann-3b8731129/" target="_blank"></a></li>
                 </ul>
             </div>
         </footer>
