Links open in new tabs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img class="img-responsive" src="images/entertainment_center-500_medium.jpg" srcset="images/entertainment_center-500_medium.jpg 500w, images/entertainment_center-800_large.jpg 800w" sizes="(max-width: 768px) 100vw, (min-width: 769px) and (max-width: 991px) 50vw, 33vw" alt="Image of popcorn and movie reel">
                 <div class="project">
                     <h3>Entertainment Center</h3>
-                    <a href="https://github.com/harmannd/entertainment_center">Github link</a>
+                    <a href="https://github.com/harmannd/entertainment_center" target="_blank">Github link</a>
                 </div>
             </article>
 
@@ -58,7 +58,7 @@
                 <img class="img-responsive" src="images/papabob-500_medium.jpg" srcset="images/papabob-500_medium.jpg 500w, images/papabob-800_large.jpg 800w" sizes="(max-width: 768px) 100vw, (min-width: 769px) and (max-width: 991px) 50vw, 33vw" alt="Image of a Pizza shop">
                 <div class="project">
                     <h3>Papa Bobs</h3>
-                    <a href="https://github.com/harmannd/PapaBobs">Github link</a>
+                    <a href="https://github.com/harmannd/PapaBobs" target="_blank">Github link</a>
                 </div>
             </article>
 
@@ -66,7 +66,7 @@
                 <img class="img-responsive" src="images/portfolio-500_medium.jpg" srcset="images/portfolio-500_medium.jpg 500w, images/portfolio-800_large.jpg 800w" sizes="(max-width: 768px) 100vw, (min-width: 769px) and (max-width: 991px) 50vw, 33vw" alt="Image of a portfolio">
                 <div class="project">
                     <h3>Portfolio</h3>
-                    <a href="https://github.com/harmannd/Portfolio-Final">Github link</a>
+                    <a href="https://github.com/harmannd/Portfolio-Final" target="_blank">Github link</a>
                 </div>
             </article>
         </section>
